--- a/project/app/src/main/res/layout/petbus_action.xml
+++ b/project/app/src/main/res/layout/petbus_action.xml
@@ -50,13 +50,13 @@
                     android:clickable="false"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/tab_weixin_pressed"
+                    android:src="@mipmap/recode_pressed"
                     android:background="#00000000"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#ffffff"
-                    android:text="微信"/>
+                    android:text="记录"/>
             </LinearLayout>
             <LinearLayout
                 android:id="@+id/id_tab_frd"
@@ -71,13 +71,13 @@
                     android:clickable="false"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/tab_find_frd_normal"
+                    android:src="@mipmap/overview_normal"
                     android:background="#00000000"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#ffffff"
-                    android:text="朋友"/>
+                    android:text="统计"/>
             </LinearLayout>
             <LinearLayout
                 android:id="@+id/id_tab_address"
@@ -88,17 +88,17 @@
                 android:orientation="vertical">
 
                 <ImageButton
-                    android:id="@+id/id_tab_address_img"
+                    android:id="@+id/action_diary"
                     android:clickable="false"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/tab_address_normal"
+                    android:src="@mipmap/diary_normal"
                     android:background="#00000000"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#ffffff"
-                    android:text="通讯录"/>
+                    android:text="日记"/>
             </LinearLayout>
             <LinearLayout
                 android:id="@+id/id_tab_setting"
@@ -109,17 +109,17 @@
                 android:orientation="vertical">
 
                 <ImageButton
-                    android:id="@+id/id_tab_setting_img"
+                    android:id="@+id/action_alarm"
                     android:clickable="false"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/tab_settings_normal"
+                    android:src="@mipmap/alarm_normal"
                     android:background="#00000000"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#ffffff"
-                    android:text="设置"/>
+                    android:text="提醒"/>
             </LinearLayout>
 
         </LinearLayout>
