--- a/project/app/src/main/res/layout/petbus_welcome.xml
+++ b/project/app/src/main/res/layout/petbus_welcome.xml
@@ -6,15 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".petbus_welcome">
 
-    <TextView
-        android:id="@+id/sample_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:clickable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <FrameLayout
+        android:id="@+id/welcome_fragment"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_height="0dp">
+    </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
