--- a/project/app/src/main/res/layout/actionfragment_overview.xml
+++ b/project/app/src/main/res/layout/actionfragment_overview.xml
@@ -1,12 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-    <TextView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:orientation="horizontal"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+        <View
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_height="1dp"
+            android:background="#aa000000" />
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:choiceMode="singleChoice"/>
+        <View
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_height="1dp"
+            android:background="#aa000000" />
+    </LinearLayout>
+    <com.petbus.tj.petbus.ui.LineGraphicView
+        android:id="@+id/tabview_id"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:textSize="30sp"
-        android:text="The overview Tab!"/>
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="100dp"
+        android:textSize="30sp" />
 </LinearLayout>
