--- a/project/app/src/main/res/values/colors.xml
+++ b/project/app/src/main/res/values/colors.xml
@@ -3,5 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="colorBlack">#00000000</color>
+    <color name="colorBlack">#000000</color>
+    <color name="color_f2f2f2">#c2a2b2</color>
+    <color name="color_ff4631">#ff4631</color>
+    <color name="color_999999">#999999</color>
 </resources>
