--- a/project/app/src/main/res/layout/actionfragment_actionrecode.xml
+++ b/project/app/src/main/res/layout/actionfragment_actionrecode.xml
@@ -10,18 +10,14 @@
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="100sp"
-            android:background="@color/colorBlack"
             android:gravity="center"
             android:id="@+id/information_layout"
             android:orientation="horizontal">
-
             <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
-                android:background="@color/colorBlack"
                 android:gravity="center"
                 android:orientation="horizontal">
-
                 <TextView
                     android:id="@+id/text_lastaction1"
                     android:layout_width="match_parent"
@@ -29,7 +25,6 @@
                     android:textSize="10sp"
                     android:layout_alignParentBottom="true"
                     android:text="上次喂食：7小时前"/>
-
                 <TextView
                     android:id="@+id/text_lastaction2"
                     android:layout_width="match_parent"
@@ -49,14 +44,12 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="match_parent"
-                android:background="@color/colorBlack"
                 android:gravity="center"
                 android:orientation="horizontal">
                 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="match_parent"
-                    android:background="@color/colorBlack"
                     android:gravity="center"
                     android:layout_marginRight="50dp"
                     android:orientation="horizontal">
@@ -64,14 +57,12 @@
                         android:layout_width="match_parent"
                         android:layout_weight="1"
                         android:layout_height="match_parent"
-                        android:background="@color/colorBlack"
                         android:gravity="center"
                         android:orientation="vertical">
                     </LinearLayout>
                     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:background="@color/colorBlack"
                         android:gravity="center"
                         android:orientation="vertical">
                         <ImageButton
@@ -103,22 +94,16 @@
                     android:background="#00000000"
                     android:clickable="false"
                     android:src="@mipmap/arrayright_normal" />
-
-
             </LinearLayout>
-
         </LinearLayout>
         <View
             android:layout_width="fill_parent"
             android:layout_marginTop="10dp"
             android:layout_height="1dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:background="#aa000000" /> 
+            android:background="@color/colorBlack" /> 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@color/colorPrimaryDark"
             android:gravity="center"
             android:id="@+id/actionview_lineralayout"
             android:layout_weight="1"
@@ -140,6 +125,4 @@
         android:layout_marginBottom="30dp"
         android:layout_marginRight="20dp"
         android:background="@mipmap/add_normal" />
-
-
 </RelativeLayout>
