--- a/project/app/src/main/res/layout/recode_date.xml
+++ b/project/app/src/main/res/layout/recode_date.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
         <View
             android:layout_width="wrap_content"
             android:layout_weight="1"
-            android:layout_height="1dp"
+            android:gravity="center"
+            android:layout_height="2dp"
             android:background="#aa000000" />
         <TextView
             android:id="@+id/daily_text"
@@ -17,7 +18,8 @@
             android:text="recode_1!"/>
         <View
             android:layout_width="wrap_content"
+            android:gravity="center"
             android:layout_weight="1"
-            android:layout_height="1dp"
+            android:layout_height="2dp"
             android:background="#aa000000" />>
 </LinearLayout>
