--- a/project/app/src/main/res/layout/recode_recode.xml
+++ b/project/app/src/main/res/layout/recode_recode.xml
@@ -8,7 +8,7 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@color/colorAccent"
+        android:background="#00000000"
         android:layout_weight="1"
         android:gravity="center"
         android:orientation="horizontal">
@@ -57,7 +57,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="1"
-        android:background="@color/colorAccent"
+        android:background="#00000000"
         android:id="@+id/information_layout"
         android:orientation="horizontal">
 
@@ -65,7 +65,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="#00000000"
             android:orientation="vertical">
             <ImageView
                 android:id="@+id/recode_petportrait_image"
@@ -92,7 +92,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="#00000000"
             android:orientation="vertical">
             <ImageView
                 android:id="@+id/recode_image"
