--- a/project/app/src/main/res/layout/recode_date.xml
+++ b/project/app/src/main/res/layout/recode_date.xml
@@ -3,12 +3,28 @@
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-        <View
-            android:layout_width="wrap_content"
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="vertical"
+            android:layout_width="1dp"
             android:layout_weight="1"
-            android:gravity="center"
-            android:layout_height="2dp"
-            android:background="#aa000000" />
+            android:layout_marginLeft="50dp"
+            android:layout_height="match_parent">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_weight="1"
+                android:background="#00000000" />
+            <View
+                android:layout_width="wrap_content"
+                android:gravity="center"
+                android:layout_height="2dp"
+                android:background="#aa000000" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_weight="1"
+                android:background="#00000000" />
+        </LinearLayout>
         <TextView
             android:id="@+id/daily_text"
             android:layout_width="wrap_content"
@@ -16,10 +32,26 @@
             android:gravity="center"
             android:textSize="30sp"
             android:text="recode_1!"/>
-        <View
-            android:layout_width="wrap_content"
-            android:gravity="center"
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="vertical"
+            android:layout_marginRight="50dp"
+            android:layout_width="1dp"
             android:layout_weight="1"
-            android:layout_height="2dp"
-            android:background="#aa000000" />>
+            android:layout_height="match_parent">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_weight="1"
+                android:background="#00000000" />
+            <View
+                android:layout_width="wrap_content"
+                android:gravity="center"
+                android:layout_height="2dp"
+                android:background="#aa000000" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_weight="1"
+                android:background="#00000000" />
+        </LinearLayout>
 </LinearLayout>
