--- a/project/app/src/main/res/layout/actionfragment_actionrecode.xml
+++ b/project/app/src/main/res/layout/actionfragment_actionrecode.xml
@@ -86,7 +86,7 @@
                     </LinearLayout>
                 </LinearLayout>
                 <ImageButton
-                    android:id="@+id/allview_buttom"
+                    android:id="@+id/profile_buttom"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
