--- a/project/app/src/main/res/layout/actionfragment_diary.xml
+++ b/project/app/src/main/res/layout/actionfragment_diary.xml
@@ -20,7 +20,7 @@
             android:gravity="center"
             android:orientation="horizontal">
             <TextView
-                android:id="@+id/recode_time_text"
+                android:id="@+id/record_time_text"
                 android:layout_width="1dp"
                 android:layout_weight="1"
                 android:layout_height="fill_parent"
