--- a/project/app/src/main/res/layout/record_record.xml
+++ b/project/app/src/main/res/layout/record_record.xml
@@ -14,7 +14,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/recode_times"
+            android:id="@+id/record_times"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
